manifests/manifests/receiver-test/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plarail2021-webrtc-receiver
  namespace: plarail2021
spec:
  selector:
    matchLabels:
      app: plarail2021-webrtc-receiver
  template:
    metadata:
      labels:
        app: plarail2021-webrtc-receiver
    spec:
      containers:
        - name: plarail2021-webrtc-receiver
          image: ghcr.io/ueckoken/plarail2021-soft-receiver-test:888195d-1637314828 # {"$imagepolicy": "plarail2021:webrtc-receiver"}
          imagePullPolicy: Always
          ports:
            - containerPort: 80
