manifests/manifests/receiver-test/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: plarail2021-webrtc-receiver
  namespace: plarail2021
spec:
  type: NodePort
  selector:
    app: plarail2021-webrtc-receiver
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
